Replace fixed thread pool with virtual thread pool in Receiver and SendFile classes